# insurance-causal-policy

./: CHANGELOG.md  README.md  pyproject.toml
benchmarks/: benchmark.py  drsc_vs_sdid.py
notebooks/: benchmark_sdid.py  drsc_vs_sdid.py  run_tests.py  run_tests_drsc.py  run_tests_new_coverage.py  sdid_demo.py
src/insurance_causal_policy/: __init__.py  _drsc.py  _event_study.py  _evidence.py  _panel.py  _sdid.py  _sensitivity.py  _staggered.py  _synthetic.py  _types.py
tests/: conftest.py  test_drsc.py  test_event_study.py  test_evidence.py  test_integration.py  test_new_coverage.py  test_panel.py  test_panel_edge_cases.py  test_sdid.py  test_sensitivity.py  test_staggered.py  test_staggered_edge_cases.py  test_synthetic.py  test_types.py
