[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-causal-policy"
version = "0.1.3"
description = "Causal evaluation of insurance pricing interventions using Synthetic Difference-in-Differences"
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "insurance",
    "causal inference",
    "difference-in-differences",
    "synthetic control",
    "pricing",
    "actuarial",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "polars>=0.20",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "cvxpy>=1.4",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
staggered = ["differences>=0.2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-causal-policy"
Repository = "https://github.com/burning-cost/insurance-causal-policy"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_causal_policy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
